samples/service-canary/bookinfo-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: bookinfo-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "bookinfo.example.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bookinfo
spec:
  gateways:
  - mesh
  - bookinfo-gateway
  hosts:
  - productpage
  - "bookinfo.example.com"
  http:
  - match:
    - uri:
        exact: /productpage
    - uri:
        prefix: /static
    - uri:
        exact: /login
    - uri:
        exact: /logout
    - uri:
        prefix: /api/v1/products
    route:
    - destination:
        host: productpage-v1.bookinfo-iter8.svc.cluster.local
        port:
          number: 9080
      weight: 100
    # - destination:
    #     host: productpage-v2.bookinfo.iter8.svc.cluster.local
    #     port:
    #       number: 9080
    #   weight: 0
    - destination:
        host: productpage-v3.bookinfo-iter8.svc.cluster.local
        port:
          number: 9080
      weight: 0
